--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,3 +4,9 @@ body {
   color: $body-color;
   font-family: sans-serif;
 }
+
+.qustion__title {
+  width: 600px;
+  height: 200px;
+  background-color: red;
+}
